# worklab

./: .gitattributes  .gitignore  README.md  erro.ipynb
Arduino/MultiFunctionalRobot/: Projeto-robo.pro  control.cpp
Arduino/QtArduino/arduinoCode/: arduinoCode.ino
Arduino/capCounter/: EEPROMhelper.hpp  capCounter.ino  pinout.hpp  smallFunctions.hpp  utils.hpp
Arduino/capCounter/EEPROMCleaner/: EEPROMCleaner.ino
Arduino/multiFunctionalRobot/: multiFunctionalRobot.ino  robot.hpp  smallFunctions.hpp
Arduino/pumpController/: bomba.h  pump.h  pumpController.ino
Arduino/sms controler/sitio/: bomba.h  codes.h  sitio.ino
Arduino/sms controler/sitio/bibliotecas/: Sim800l-1.5.0.md  Sim800l.h
Arduino/tabuada/: questions.hpp  tabuada.ino  utils.hpp
IFBA/OBR/2021/: compiler.py
IFBA/OBR/2021/src/: main.cs
IFBA/multiFunctionalRobot/: multiFunctionalRobot.ino  robot.hpp  utils.hpp
IFBA/qTotem/: README.md
IFBA/qTotem/interface/: logic.js
IFBA/qTotem/interface/telas/: inicio.qml  perguntas.qml  resultado.qml
IFBA/qTotem/web/: server.py
IFBA/qTotem/web/static/: styles.css
IFBA/qTotem/web/templates/: index.html
IFBA/tabuada/: questions.hpp
MultiFunctionalRobot/: control.hpp  main.cpp
MultiFunctionalRobot/onefile/: onefile.ino
OBR/2019/: OBR.ev3
OBR/2021/: code.cs  code.re  code.sBoticsR  code.txt
OBR/2021/src/: PID.cs  acharTriangulo.cs  main.cs  resgate.cs  seguirLinha.cs
Others/PyTorch/: pyproject.toml
Others/PyTorch/src/: NN.ipynb  PINN.ipynb  data_generators.py  main.py  trainer.py  visualize.py
Others/PyTorch/src/models/: blob.py  linear_regression.py
Others/neural-networks/: pyproject.toml
Others/neural-networks/src/benchmarks/: deepxde.ipynb  pytorch.ipynb  tensorflow.ipynb
Others/neural-networks/src/examples/: harmonic-oscillator.ipynb  linear-regression.ipynb  simple-rnn.ipynb
Others/pumpController/: codes.h  pump.h  pumpController.ino
Projeto-OBR/: esboco.txt  esboço.txt
QtArduino/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
UFBA/ENGD02/: .gitignore  pnpm-lock.yaml  tsup.config.ts
UFBA/ENGD02 - ESTATÍSTICA NA ENGENHARIA/: package.json
UFBA/ENGD02 - ESTATÍSTICA NA ENGENHARIA/src/: index.ts
UFBA/ENGD06/: pyproject.toml
UFBA/ENGD06 - ENGENHARIA ECONÔMICA E GESTÃO/src/: metrics.ipynb  plots.py
UFBA/ENGD06/src/: metrics.ipynb  plots.py
UFBA/ENGF57/: electricCircuit.fzz
UFBA/ENGF57 - INTRODUÇÃO Á ENGENHARIA DE CONTROLE E AUTOMAÇÃO/: WMS.ino
UFBA/ENGF57 - INTRODUÇÃO Á ENGENHARIA DE CONTROLE E AUTOMAÇÃO/ultrasonicCalibratorTool/: ultrasonicCalibratorTool.ino
UFBA/ENGF57/daemon/: .gitignore
UFBA/ENGG03/: pyproject.toml
UFBA/ENGG03 - MÉTODOS NUMÉRICOS NA ENGENHARIA/: .gitignore  README.md
UFBA/ENGG03 - MÉTODOS NUMÉRICOS NA ENGENHARIA/engg03/: bvp.py  carga.py  descarga.py  integral.py  ivp.py  main.py  pde.py  pde2.py  prova1.ipynb  prova3.ipynb  raiz-por-newton2.py  visualize.py
UFBA/ENGG03/engg03/: derivada-newton.py  derivada.py  derivada2.py  eda.go  eda.py  main.py  maximize.py  prova1.ipynb  prova2.ipynb  raiz-por-newton.py  raiz-por-newton2.py  sistemas-não-lineares.py  test.ipynb  visualize.py
UFBA/ENGG11/: dados.csv  dados.xlsx  pyproject.toml
UFBA/ENGG11 - Otimização de Processos/: pyproject.toml
UFBA/ENGG11 - Otimização de Processos/src/: Z.hkl  plot.py  typings.py
UFBA/ENGG11/src/: benchmark.ipynb  erro.ipynb  genetic_alg.ipynb  genetic_operators.py  genetic_utils.py  plot.py
UFBA/IC/artigo-1/: .gitignore  main.tex  ref.bib
UFBA/IC/artigo-1/content/: PINNs.tex  abstract.tex  introduction.tex
UFBA/LLMs/: .gitignore  pyproject.toml
UFBA/LLMs/LLMs/: chat.py  db.py  filter.py  main.py
UFBA/PyTorch/: .gitignore  pyproject.toml
UFBA/PyTorch/src/: data_generators.py  trainer.py
UFBA/PyTorch/src/models/: blob.py
UFBA/Tomorrow - Criação de Aplicações Baseadas em LLMs/: .gitignore
UFBA/Tomorrow - Criação de Aplicações Baseadas em LLMs/LLMs/: chat.py  embedding.py  main.py
UFBA/WMS/: WMS.ino  container.hpp  electricCircuit.fzz  section.hpp
UFBA/WMS/backend/: daemon.js  daemon.mjs  package.json  pnpm-lock.yaml
UFBA/WMS/daemon/: package.json  pnpm-lock.yaml
UFBA/WMS/desktop/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
UFBA/WMS/ultrasonicCalibratorTool/: ultrasonicCalibratorTool.ino
UFBA/crude-exchanger/src/: generators.ts  index.ts
capcounter/: capcounter.ino  main.cpp
capcounter/EEPROMCleaner/: EEPROMCleaner.ino
qTotem/: Pipfile  README.md  estilo.py  main.py  paciente.py  qtotem.pyproject  readme.md  requirements.txt
qTotem/interface/: bridge.py  estilo.qrc  logic.js  main.qml  ponte.py  qtquickcontrols2.conf  textos.py
qTotem/interface/telas/: inicio.qml  perguntas.qml  resultado.qml
qTotem/siteSide/: requirements.txt  server.py
qTotem/web/: server.py
qTotem/web/static/: init.js
tabuada/: questoes.ino  readBot.ino  smallFunctions.hpp  tabuada.ino
totem/: CMakeLists.txt  interface.cpp  interface.h  interface.kv  interface.py  interface.ui  main.cpp  main.py  paciente.cpp  paciente.h  paciente.py  readme.md  textos.py  vnc.sh
totem/site/: requirements.txt  server.py
totem/site/static/: init.js  senha.js  styles.css
totem/site/templates/: index.html  user_template.html
