[tool.poetry]
name = "learn-pytorch"
version = "0.1.0"
description = ""
authors = ["Silas Henrique <silash35@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.taskipy.tasks]
main = "python src/main.py"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
torch = "^2.3.1"
numpy = "^2.0.0"
opencv-python = "^4.10.0.84"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
taskipy = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
