[project]
name = "neural-networks"
version = "0.1.0"
authors = [ {name = "Silas Henrique", email = "silash35@gmail.com"}, ]
requires-python = "==3.12.9"
dependencies = [
    "casadi>=3.6.7",
    "deepxde>=1.13.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "tensorflow>=2.19.0",
    "torch>=2.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
docstring-code-format = true
