[tool.poetry]
name = "engg03"
version = "0.1.0"
description = ""
authors = ["Silas Henrique <silash35@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.mypy]
strict = true
disallow_untyped_calls = false

[tool.taskipy.tasks]
lint = "black . --check && mypy ."
main = "python engg03/main.py"
newton = "python engg03/raiz-por-newton.py"
linear = "python engg03/sistemas-lineares.py"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
sympy = "^1.12"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
taskipy = "^1.12.2"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
