[tool.poetry]
name = "engg03"
version = "0.1.0"
description = ""
authors = ["Silas Henrique <silash35@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.taskipy.tasks]
lint = "black . --check && pyright -p ."
main = "python engg03/main.py"
visualize = "python engg03/visualize.py"
newton = "python engg03/raiz-por-newton.py"
newton2 = "python engg03/raiz-por-newton2.py"
linear = "python engg03/sistemas-lineares.py"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
sympy = "^1.12"
scipy = "^1.12.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
taskipy = "^1.12.2"
pyright = "^1.1.355"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
