[project]
name = "otimization"
version = "0.1.0"
authors = [ {name = "Silas Henrique", email = "silash35@gmail.com"}, ]
requires-python = ">=3.13"

dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "scipy>=1.14.1",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
docstring-code-format = true

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
]
